--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="col-md-1 col-lg-2"></div>
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
-						<div class="profile-img"><img src"cv.png" alt=""></div>
+						<div class="profile-img"><img src"images/cv.png" alt=""></div>
 						<h2><b>Nicolas Scordamaglia</b></h2>
 						<h4 class="font-yellow">Web & Mobile Developer</h4>
 						<ul class="information margin-tb-30">
