--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<header>
 		<div class="container">
 
-			<a class="downlad-btn" href="#">Download CV</a>
+			<a class="downlad-btn" href="downlad/resume.pdf">Download CV</a>
 		</div><!-- container -->
 	</header>
 
@@ -39,7 +39,7 @@
 				<div class="col-md-1 col-lg-2"></div>
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
-						<div class="profile-img"><img src"images/cv.png" alt=""></div>
+						<div class="profile-img"><img src="images/cv.png" alt=""></div>
 						<h2><b>Nicolas Scordamaglia</b></h2>
 						<h4 class="font-yellow">Web & Mobile Developer</h4>
 						<ul class="information margin-tb-30">
@@ -48,9 +48,9 @@
 
 						</ul>
 						<ul class="social-icons">
-							<li><a href="#"><i class="ion-social-github"></i></a></li>
-							<li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li><a href="#"><i class="ion-social-twitter"></i></a></li>
+							<li><a href="https://github.com/nscordamaglia"><i class="ion-social-github"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/scordamaglianicolas/"><i class="ion-social-linkedin"></i></a></li>
+							<li><a href="https://twitter.com/rustycius"><i class="ion-social-twitter"></i></a></li>
 						</ul>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
