--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<header>
 		<div class="container">
 
-			<a class="downlad-btn" href="downlad/resume.pdf">Download CV</a>
+			<a class="downlad-btn" href="download/resume.pdf">Download CV</a>
 		</div><!-- container -->
 	</header>
 
