update fiverr icon

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 							<li><a href="https://github.com/nscordamaglia"><i class="ion-social-github"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/scordamaglianicolas/"><i class="ion-social-linkedin"></i></a></li>
 							<li><a href="https://twitter.com/rustycius"><i class="ion-social-twitter"></i></a></li>
+							<li><a href="https://www.fiverr.com/s2/5a12ebb91e"><i><img src="images/fiverr-icon.png" class="icon-fiverr"/></i></a></li>
 						</ul>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
