--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Across this years in one of the most important Telcos, I learned to responsibili
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".75">
+								<div class="radial-progress" data-prog-percent=".65">
 									<div></div>
 									<h6 class="progress-title">HTML5 & CSS3</h6>
 								</div>
@@ -88,7 +88,7 @@ Across this years in one of the most important Telcos, I learned to responsibili
 
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".78">
+								<div class="radial-progress" data-prog-percent=".58">
 									<div></div>
 									<h6 class="progress-title">WEB DESIGN</h6>
 								</div>
@@ -97,16 +97,16 @@ Across this years in one of the most important Telcos, I learned to responsibili
 
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".67">
+								<div class="radial-progress" data-prog-percent=".75">
 									<div></div>
-									<h6 class="progress-title">JAVA</h6>
+									<h6 class="progress-title">Mobile</h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
 
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".75">
+								<div class="radial-progress" data-prog-percent=".65">
 									<div></div>
 									<h6 class="progress-title">PHP</h6>
 								</div>
