--- a/index.html
+++ b/index.html
@@ -28,8 +28,11 @@
 
 	<header>
 		<div class="container">
-
-			<a class="downlad-btn" href="download/resume.pdf">Download CV</a>
+			<!-- Para cambiar el idioma -->
+			<button class="en idioma" data-lang="es">Español</button>
+			<button class="es idioma" data-lang="en">English</button>
+			<a class="downlad-btn en" href="download/Nicolas_Scordamaglia_en.pdf">Download CV</a>
+			<a class="downlad-btn es" href="download/Nicolas_Scordamaglia_es.pdf">Descargar CV</a>
 		</div><!-- container -->
 	</header>
 
@@ -39,11 +42,16 @@
 				<div class="col-md-1 col-lg-2"></div>
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
-						<div class="profile-img"><img src="images/cv.png" alt=""></div>
+						<div class="profile-img"><img src="images/me.png" alt=""></div>
 						<h2><b>Nicolas Scordamaglia</b></h2>
 						<h4 class="font-yellow">Web & Mobile Developer</h4>
-						<ul class="information margin-tb-30">
-							<li><b>BORN : </b>September 14, 1981</li>
+						<ul class="information margin-tb-30 en">
+							<li class="en"><b>BORN : </b>September 14, 1981</li>
+							<li><b>EMAIL : </b>nicolas.scordamaglia@gmail.com</li>
+
+						</ul>
+						<ul class="information margin-tb-30 es">
+							<li class="es"><b>NACIMIENTO : </b>September 14, 1981</li>
 							<li><b>EMAIL : </b>nicolas.scordamaglia@gmail.com</li>
 
 						</ul>
@@ -67,14 +75,31 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="heading">
-						<h3><b>About me</b></h3>
-						<h6 class="font-lite-black"><b>PROFESSIONAL PATH</b></h6>
+						<h3 class="en"><b>About me</b></h3>
+						<h3 class="es"><b>Sobre mi</b></h3>
+						<h6 class="font-lite-black en"><b>PROFESSIONAL PROFILE</b></h6>
+						<h6 class="font-lite-black es"><b>PERFIL PROFESIONAL</b></h6>
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
-					<p class="margin-b-50">With 13 years of experience in telecommunications, I have extensive knowledge in service networks (routers, switches, others), very good relationship with the corporate client and improving day by day the commercial skill.
-Also, I am a programmer with passion for the design of interfaces, I try to keep updated with new technologies because will help me in any opportunities.
-Across this years in one of the most important Telcos, I learned to responsibility, be a team player and work hard to a team goal.</p>
+					<p class="margin-b-50 en">I am a developer with passion for the design of interfaces, 
+						I try to keep updated with new technologies because will help me in any opportunity job.
+						Across this years in one of the most important Telcos, I learned to responsibility, 
+						be a team player and work hard to a team goal.
+						Also, with 13 years of experience in telecommunications, 
+						i've extensive knowledge in networks administration, 
+						very good relationship with the corporate client and commercial skills.
+						</p>
+
+						<p class="margin-b-50 es">Soy un desarrollador con pasión por el diseño de interfaces,
+							trato de mantenerme actualizado con las nuevas tecnologías 
+							para estar preparado para futuras oportunidades laborales.
+							A través de los años, en una de las empresas de telecomunicaciones mas importantes del país,
+							adquirí mayor responsabilidad, siempre trabajando en equipo para alcanzar las metas 
+							tanto personales como grupales.
+							Además, tengo conocimientos en administracion y soporte de redes y manejo de clentes interno y externo. 
+						
+							</p>
 
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
