fix: update resume

--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
 	<header>
 		<div class="container">
 			<!-- Para cambiar el idioma -->
-			<button class="en idioma" data-lang="es">Español</button>
-			<button class="es idioma" data-lang="en">English</button>
-			<a class="downlad-btn en" href="download/Nicolas_Scordamaglia_en.pdf">Download CV</a>
-			<a class="downlad-btn es" href="download/Nicolas_Scordamaglia_es.pdf">Descargar CV</a>
+			<button class="en idioma btn btn-primary btn-sm" data-lang="es">Español</button>
+			<button class="es idioma btn btn-primary btn-sm" data-lang="en">English</button>
 		</div><!-- container -->
 	</header>
 
@@ -51,7 +49,7 @@
 
 						</ul>
 						<ul class="information margin-tb-30 es">
-							<li class="es"><b>NACIMIENTO : </b>September 14, 1981</li>
+							<li class="es"><b>NACIMIENTO : </b>Septiembre 14, 1981</li>
 							<li><b>EMAIL : </b>nicolas.scordamaglia@gmail.com</li>
 
 						</ul>
@@ -59,7 +57,6 @@
 							<li><a href="https://github.com/nscordamaglia"><i class="ion-social-github"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/scordamaglianicolas/"><i class="ion-social-linkedin"></i></a></li>
 							<li><a href="https://twitter.com/rustycius"><i class="ion-social-twitter"></i></a></li>
-							<li><a href="https://www.fiverr.com/s2/5a12ebb91e"><i><img src="images/fiverr-icon.png" class="icon-fiverr"/></i></a></li>
 						</ul>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
@@ -82,23 +79,10 @@
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
-					<p class="margin-b-50 en">I am a developer with passion for the design of interfaces, 
-						I try to keep updated with new technologies because will help me in any opportunity job.
-						Across this years in one of the most important Telcos, I learned to responsibility, 
-						be a team player and work hard to a team goal.
-						Also, with 13 years of experience in telecommunications, 
-						i've extensive knowledge in networks administration, 
-						very good relationship with the corporate client and commercial skills.
+					<p class="margin-b-50 en">Critical thinking, decision making and problem solving. Self-taught in the software area, looking for professional growth in the development industry. Experience in corporate services consulting. ● Experience with web technologies (PHP + Javascript + React bases). ● Basic knowledge in mobile (native or hybrid). ● Good practices in OOP, design patterns and TDD. ● Versioning with Git, handling of Docker and Linux environment. ● Agile methodologies and use of Jira / Trello to control tasks.
 						</p>
 
-						<p class="margin-b-50 es">Soy un desarrollador con pasión por el diseño de interfaces,
-							trato de mantenerme actualizado con las nuevas tecnologías 
-							para estar preparado para futuras oportunidades laborales.
-							A través de los años, en una de las empresas de telecomunicaciones mas importantes del país,
-							adquirí mayor responsabilidad, siempre trabajando en equipo para alcanzar las metas 
-							tanto personales como grupales.
-							Además, tengo conocimientos en administracion y soporte de redes y manejo de clentes interno y externo. 
-						
+						<p class="margin-b-50 es">Pensamiento crítico, toma de decisiones y resolución de problemas. Autodidacta en el área del software, en busca de crecimiento profesional en la industria del desarrollo. Experiencia en consultoría de servicios corporativos. ● Experiencia con tecnologías web (PHP + Javascript + bases de React). ● Conocimientos básicos en mobile (nativo o híbrido). ● Buenas prácticas en OOP, patrones de diseño y TDD. ● Versionado con Git , manejo de Docker y entorno Linux. ● Metodologías ágiles y utilización de Jira / Trello para el control de tareas.
 							</p>
 
 					<div class="row">
@@ -106,7 +90,7 @@
 							<div class="radial-prog-area margin-b-30">
 								<div class="radial-progress" data-prog-percent=".65">
 									<div></div>
-									<h6 class="progress-title">HTML5 & CSS3</h6>
+									<h6 class="progress-title">Frontend</h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
@@ -115,25 +99,25 @@
 							<div class="radial-prog-area margin-b-30">
 								<div class="radial-progress" data-prog-percent=".58">
 									<div></div>
-									<h6 class="progress-title">WEB DESIGN</h6>
-								</div>
-							</div><!-- radial-prog-area-->
-						</div><!-- col-sm-6-->
-
-						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".75">
-									<div></div>
 									<h6 class="progress-title">Mobile</h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
 
 						<div class="col-sm-6 col-md-6 col-lg-3">
-							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".65">
+							<div class="radial-prog-area margin-b-30">
+								<div class="radial-progress" data-prog-percent=".85">
 									<div></div>
-									<h6 class="progress-title">PHP</h6>
+									<h6 class="progress-title">Backend</h6>
+								</div>
+							</div><!-- radial-prog-area-->
+						</div><!-- col-sm-6-->
+
+						<div class="col-sm-6 col-md-6 col-lg-3">
+							<div class="radial-prog-area margin-b-50">
+								<div class="radial-progress" data-prog-percent=".45">
+									<div></div>
+									<h6 class="progress-title">AWS</h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
