--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 					<div class="row">
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".65">
+								<div class="radial-progress" data-prog-percent=".45">
 									<div></div>
-									<h6 class="progress-title">Frontend</h6>
+									<h6 class="progress-title">Python</h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
@@ -99,23 +99,23 @@
 							<div class="radial-prog-area margin-b-30">
 								<div class="radial-progress" data-prog-percent=".58">
 									<div></div>
-									<h6 class="progress-title">Mobile</h6>
+									<h6 class="progress-title">Go</h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
 
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-30">
-								<div class="radial-progress" data-prog-percent=".85">
+								<div class="radial-progress" data-prog-percent=".90">
 									<div></div>
-									<h6 class="progress-title">Backend</h6>
+									<h6 class="progress-title">PHP</h6>
 								</div>
 							</div><!-- radial-prog-area-->
 						</div><!-- col-sm-6-->
 
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="radial-prog-area margin-b-50">
-								<div class="radial-progress" data-prog-percent=".45">
+								<div class="radial-progress" data-prog-percent=".65">
 									<div></div>
 									<h6 class="progress-title">AWS</h6>
 								</div>
